further fixed navbar spacing

--- a/src/components/shared/sidenav.module.scss
+++ b/src/components/shared/sidenav.module.scss
@@ -3,7 +3,7 @@
 .sideNav {
   background: $header-text;
   font-size: 1.2em;
-  padding: 1.2em 1em;
+  padding: 0.8em 1em;
   display: inline-flex;
 
   @include gt-lg {
